# acag

./: .gitignore  AGENTS.md  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml  deploy-site.yml  release.yml
assets/: article-cover-art-generator.desktop
examples/: gallery.rs  icon.rs  site.rs
src/: export.rs  lib.rs  main.rs  preset.rs  raster.rs  wasm.rs
src/cover/: config.rs  elements.rs  format.rs  mod.rs  render.rs  typeset.rs
src/cover/layouts/: bloco.rs  editorial.rs  ma.rs  mod.rs
src/design/: contrast.rs  mod.rs  patterns.rs  themes.rs
ui/: app.slint
web/: index.html  robots.txt  site.webmanifest  sitemap.xml
web/css/: style.css
web/js/: main.js
