[package]
name = "article-cover-art-generator"
version = "0.1.0"
edition = "2024"
description = "Native generator for 1:1 article cover art, in an Omakase / Japanese-constructivist style."
authors = ["Marcos Lima <marckfree@gmail.com>"]
license = "MIT"
repository = "https://github.com/skvggor/article-cover-art-generator"
readme = "README.md"

[[bin]]
name = "acag"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
dirs = "6.0.0"
fastrand = "2.4.1"
resvg = "0.47.0"
serde = { version = "1.0.228", features = ["derive"] }
slint = "1.16.1"
toml = "1.1.2"
ttf-parser = "0.25.1"

[build-dependencies]
slint-build = "1.16.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

# Keep the dev build snappy: lightly optimize our code, but fully optimize the
# heavy dependencies (resvg/tiny-skia/slint) so the live preview stays smooth.
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
