[package]
name = "article-cover-art-generator"
version = "1.0.0"
edition = "2024"
description = "Native generator for 1:1 article cover art, in an Omakase / Japanese-constructivist style."
authors = ["Marcos Lima <marckfree@gmail.com>"]
license = "MIT"
repository = "https://github.com/skvggor/acag"
readme = "README.md"

[[bin]]
name = "acag"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
dirs = "6.0.0"
fastrand = "2.4.1"
resvg = "0.47.0"
serde = { version = "1.0.228", features = ["derive"] }
slint = { version = "1.16.1", features = ["renderer-software"] }
toml = "1.1.2"
ttf-parser = "0.25.1"

[build-dependencies]
slint-build = "1.16.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

# Keep dev/CI builds fast by optimizing only the SVG → raster hot path, so the
# live preview stays smooth without optimizing all ~560 dependencies (which made
# cold builds and CI slow). Everything else compiles cheaply at the dev default.
[profile.dev.package.usvg]
opt-level = 3
[profile.dev.package.resvg]
opt-level = 3
[profile.dev.package.tiny-skia]
opt-level = 3
[profile.dev.package.tiny-skia-path]
opt-level = 3
[profile.dev.package.rustybuzz]
opt-level = 3
[profile.dev.package.ttf-parser]
opt-level = 3
[profile.dev.package.fontdb]
opt-level = 3
[profile.dev.package.png]
opt-level = 3
[profile.dev.package.fdeflate]
opt-level = 3
